--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "start": "concurrently \"yarn server \" \"cd client && yarn start\""
   },
   "dependencies": {
+    "@types/history": "^4.7.5",
+    "@types/react-router-dom": "^5.1.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6"
+    "express-fileupload": "^1.1.6",
+    "history": "^4.10.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
