--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/history": "^4.7.5",
     "@types/react-router-dom": "^5.1.3",
+    "antd": "^4.0.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
