--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "server": "nodemon server.js",
     "client": "cd client && yarn start",
-    "start": "concurrently \"yarn server \" \"cd client && yarn start\""
+    "start": "concurrently \"yarn server \" \"cd client && yarn start\" \"cd client && yarn api\""
   },
   "dependencies": {
     "@types/history": "^4.7.5",
